add alias to blog post